# youtube_metrics_analyzer

./: README.md  main.py  pyproject.toml
src/: __init__.py  cli.py  utils.py
src/reporters/: __init__.py  base.py  clickbait.py
tests/: test_cli.py  test_integration.py  test_reporters.py  test_utils.py
tests/fixtures/: empty_data.csv  valid_data.csv
